grammar.js
    compilation_unit: ($) => repeat($._statement),

    _statement: ($) =>
      choice(
        $.let_binding,
        $.type_definition,
        $.expression_statement,
        $.open_statement,
        $.module_definition,
        $.mutable_record_update,
      ),

    type_definition: ($) =>
      seq(
        "type",
        // optional($._attribute),
        optional("nonrec"),
        $.type_binding,
        $._semicolon,
      ),

    _type: ($) =>
      choice($._tuple_type, $.function_type, $.aliased_type, $.type_nested),

    type_binding: ($) =>
      seq(
        optional($._type_params),
        choice($._type_binding, $._extensible_type_binding),
        repeat($.item_attribute),
      ),

    _type_binding: ($) =>
      seq(
        field("name", $._type_constructor),
        optional($._type_equation),
        optional(
          seq(
            "=",
            optional("private"),
            field(
              "body",
              choice($.variant_declaration, $.record_declaration, ".."),
            ),
          ),
        ),
        repeat($.type_constraint),
      ),

    function_type: ($) =>
      prec.right(PREC.match, seq("(", commaSep1(choice($.typed_label, $._type)), ")", "=>", $._type)),

    _extensible_type_binding: ($) =>
      seq(
        field("name", $.type_constructor_path),
        seq("+=", optional("private"), field("body", $.variant_declaration)),
      ),

    _semicolon: ($) => choice(";", $._automatic_semicolon),

    // JSX {{{
